# QuizApp

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/api/: Api  CMakeLists.txt
src/api/include/: Client.h  Server.h  apiGlobal.h
src/database/: CMakeLists.txt  Database
src/database/include/: connector.h  databaseGlobal.h
