add_subdirectory(database)

# Include auth directory
add_subdirectory(auth)

# Include model directory
add_subdirectory(models)

# Include quiz directory
add_subdirectory(quiz)

# Include quizsession directory
add_subdirectory(quizsession)

# Include roles directory
add_subdirectory(roles)

# Include api directory
add_subdirectory(api)

# Include gui directory
add_subdirectory(gui)

# Include utils directory
add_subdirectory(utils)